app/scss/_dataset.scss
////////////////////////////
//    Dataset Container   //
////////////////////////////

$list-item-bottom-border: 1px solid $border-color;
$sidebar-item-padding:  6px 10px;
$hover-highlight-color: #F6F8FA;
$header-height: 30px;
$header-font-size: .9rem;

#dataset-container {
  display: flex;
  flex-direction: column;
  height: 100%;

  .header {
    height: 50px;
    background-color: #315379;
    color: #F8F2F2;
    cursor: default;
    display: flex;
    flex-direction: row;
    flex-grow: 0;
    flex-shrink: 0;

    // Header Dropdown Menu

    .dropdown {
      position: absolute;
      list-style-type: none;
      padding: 0;
      background: #FFF;
      color: #000;
      border: 1px solid #b1b1b1;
      top: 50px;
      right: 0px;
      z-index: 1;
      text-align: right;
      font-size: .75rem;

      li {
        padding: 6px 13px;

        a {
          color: #000;
        }

        &:hover {
          background: #ddd
        }
      }
    }
  }

  $header-column-border: 1px solid #66737b;

  .header-left {
    flex: 1;
    display: flex;
  }

  .header-right {
    flex: 1;
    display: flex;
    justify-content: flex-end;

    .header-column {
      border-right: none;
      border-left: $header-column-border;
    }
  }

  .header-column {
    height: 100%;
    border-right: $header-column-border;
    padding: 0 9px;
    display: inline-flex;
    flex-direction: row;
    align-items: center;
    position: relative;

    &.header-column-dropdown, &.current-dataset {
      padding-right: 0;
    }

    .header-column-icon {
      .icon-inline {
        font-size: 1.2rem;
        position: relative;
        top: 5px;
        left: 7px;
      }

      img {
        border-radius: 2px;
      }
    }

    .header-column-text {
      flex-grow: 1;
      white-space: nowrap;
      padding-left: 9px;

      .label {
        font-size: 0.75rem;
        font-weight: 300;
      }

      .name {
        white-space: nowrap;
        text-overflow: ellipsis;
        display: block;
        overflow: hidden;
        font-weight: 600;
        line-height: 1.5rem;
      }
    }

    .header-column-arrow {
      height: 100%;
      width: 32px;
      margin-left: 9px;
      display: flex;
      justify-content: center;
      background-color: rgba(0,0,0,0.1);
    }

    &:hover {
      background-color: #416588;
    }

    &.expanded {
      border-right: none;
    }

    &.expanded:hover {
      background-color: transparent;
    }

    .arrow {
      width: 0px;
      height: 0px;
      border-left: 5px solid transparent;
      border-right: 5px solid transparent;
      align-self: center;

      &.expand {
        border-top: 5px solid #fff;
      }

      &.collapse {
        border-bottom: 5px solid #fff;

      }
    }
  }

  .terminal {
    background: $black;
    border: solid 1px $border-color;
    font-family: $font-family-monospace;
    overflow: scroll;
    font-size: $small-font-size;
    padding: $spacer;
    color: $white;
    text-overflow: unset;
  }

  .columns {
    display: flex;
    flex-direction: row;
    flex-grow: 1;
    overflow-y: auto;
    height: 100%;

    #sidebar {
      position: relative;
      flex: 0 0 auto;
      border-right: 1px solid $border-color;

      .resize-handle {
        position: absolute;
        right: -5px;
        top: 0px;
        height: 100%;
        width: 10px;
        cursor: ew-resize;
        z-index: 10;
      }
    }

    .content-wrapper {
      flex: 1;
      position: relative;
      flex-basis: auto;
      overflow: hidden;

      .overlay {
        position: absolute;
        height: 100%;
        width: 100%;
        background-color: #000;
        opacity: 0.4;
        z-index: 110;
      }

      .main-content {
        position: relative;
        width: 100%;
        height: 100%;

        > div {
          position: absolute;
          width: 100%;
          height: 100%;
        }
      }

      .component-container {
        display: flex;
        flex-direction: column;
        height: 100%;

        .component-header {
          line-height: 1.9rem;
          height: $header-height;
          border-bottom: $list-item-bottom-border;
          font-size: $header-font-size;
          padding: 0px 10px;
          flex-direction: row;
          display: flex;

          .component-display-name-container {
            flex: 1;
            .component-display-name {
              display: inline-block
            }
          }

          .status-dot-container {
            display: flex;
            align-items: center;
          }
        }

        .component-content {
          flex: 1;
          height: 100%;
          width: 100%;
          overflow-y: scroll;
        }
      }

      .content {
        padding: 15px;
        overflow-x: scroll;
        height: 100%;
      }
    }
  }

  .current-dataset {
    width: 250px;
    position: relative;
    z-index:10;
    display: inline-flex;

    .header-column-text {
      overflow-x: hidden;
    }

    &.expanded {
      color: #383838;
    }

    .arrow.collapse {
      border-bottom: 5px solid #383838;
    }
  }

  .dataset-list {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    width: 250px;
    background-color: #fff;
    padding-top: 50px;
  }

  .user-image {
    height: 16px;
    width: 16px;
    margin-right: 4px;
    border-radius: 2px;
  }

  .text-column {
    flex-direction: column;
    flex: 1;
    align-self: center;

    .text {
      white-space: nowrap;
      text-overflow: ellipsis;
      overflow: hidden;
      line-height: 1.6rem;
    }

    .subtext {
      display: flex;
      flex: 1;
      font-size: .65rem;
      line-height: 1.2rem;
      white-space: nowrap;
      text-overflow: ellipsis;
      overflow: hidden;
    }
  }
}

////////////////////////////
//     Dataset Sidebar    //
////////////////////////////

.dataset-sidebar {
  height: 100%;
  font-size: $header-font-size;
  cursor: default;
  display: flex;
  flex-direction: column;
  background: $appBackground;
  border-right: 1px solid $border-color;

  #list {
    overflow-y: auto;
  }

  #tabs {
    height: $header-height;
    display: flex;

    .tab {
      width: 50%;
      height: 100%;
      flex: 1;
      text-align: center;
      line-height: 1.9rem;
      border-right: 1px solid $border-color;

      &:last-child {
        border-right: 0;
      }

      &.active {
        border-bottom: 3px solid #315379;
      }

      &.disabled {
        background-color: #efefef;
        color: $text-muted;
      }

      &:hover {
        background-color: #efefef;
      }
    }
  }

  #content {
    flex: 1;
    height: 100%;
    position: relative;

    .sidebar-content {
      overflow: auto;
      position: absolute;
      width: 100%;
      height: 100%;
      background:$appBackground;
    }
  }
}

////////////////////////////
//   Sidebar List Items   //
////////////////////////////

.sidebar-list-item {
  border-bottom: $list-item-bottom-border;
  display: flex;
}

.sidebar-list-header  {
  height: $header-height;
  font-weight: 500;
  font-size: .9rem;
}

.sidebar-list-item-text {
  padding: $sidebar-item-padding;
  flex-direction: row;

  &:hover {
    background-color: $hover-highlight-color;
  }

  &.selected {
    background-color: #e6e6e6;
  }

  .status-column {
    text-align: center;
    line-height: 2.9rem;
    width: 30px;
  }

  .icon-column {
    flex-basis: 27px;
    text-align: center;
    color: #315379;
    display: flex;
    align-self: center;
  }

  &.disabled {
    color: #ccc;

    .icon-column {
      color: #ccc;
    }
  }
}

.status-dot {
  height: 10px;
  width: 10px;
  background-color: transparent;
  border-radius: 50%;
  display: inline-block;
}


////////////////////////////
//     Commit Details     //
////////////////////////////

#commit-details {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
  height: 100%;
  width: 100%;
  position:relative;

  .commit-details-header {
    height: 60px;
    padding: $sidebar-item-padding;
    border-bottom: $list-item-bottom-border;
  }
}


////////////////////////////
//    Unlinked Dataset    //
////////////////////////////

.unlinked-dataset {
  height: 100%;

  .message-container {
    h4 {
      color: #777;
      font-weight: 500;
    }

    color: #777;
    display: flex;
    flex-direction: row;
    padding: 19px;
    border: 2px solid #E9F0F7;
    max-width: 475px;
    margin: 150px auto;
    border-radius: 5px;
  }
}

